--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -352,7 +352,7 @@ currentstudent:
     title: "课题组成员"
     text: "虚争空言，不如试之易效"
     person: "2018级<br>兰阳，赵国梁，叶何，刘洪毅，魏柳，杜笑宇，张逸然，方宇彤，蒋时雨，王林飞   <br><br>
-             2019级<br>陈夏润，谢成淋，黄天波，李成扬，杨洲，郭雨洁，时绍森，刘永志, 李涛，李德才，王升，杨政，黄泽华， <br><br>
+             2019级<br>陈夏润，谢成淋，黄天波，李成扬，杨洲，郭雨洁，时绍森，刘永志, 李涛，李德才，王升，杨政，黄泽华 <br><br>
              2020级<br>何永强，胡叶舟，王雅仪，刘琛，刘宇航，刘成杰，刘军杰，肖遥，方莹 <br><br>
              本科生<br>曾红绅，杨睿，田大江，郑博，盛禹，邓一哲，李浩，蒋隽"
 
