--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -445,7 +445,7 @@ research:
         period: "2018年9月-2019年9月 项目完成情况:结题"
 
 textbook:
-    title: "发行教材与著作"
+    title: "出版著作"
     text: 
     item:
       - title: "文伟平编著,《网络攻防原理及应用》"
