--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -294,6 +294,10 @@ currentprogram:
     title: "在研课题"
     text: 
     program:
+      - time: "2021.06 - 2022.06"
+        name: "Java程序漏洞挖掘与入侵检测课题"
+        client: "华为（横向）"
+        task: "课题负责人"
       - time: "2020.05 - 2021.05"
         name: "程序语义漏洞检测"
         client: "华为（横向）"
@@ -451,17 +455,17 @@ textbook:
       - title: "文伟平编著,《网络攻防原理及应用》"
         name: "北京大学软件与微电子学院课程《网络攻击与防范》配套教材"
         source: "清华大学出版社. ISBN：9787302466925. 2017.3"
-        url: "https://github.com/xxycfhb/pku_exploit_files/blob/main/seminar/%E7%BD%91%E7%BB%9C%E6%94%BB%E9%98%B2%E5%8E%9F%E7%90%86%E5%8F%8A%E5%BA%94%E7%94%A8-%E7%94%B5%E5%AD%90%E7%89%88%E6%95%99%E6%9D%90.pdf"
+        url: "https://item.jd.com/12180569.html"
 
       - title: "蒋建春，文伟平，焦健等,《信息安全工程师教程（第2版）》"
         name: "全国计算机技术与软件专业技术资格（水平）考试 指定教材"
         source: "清华大学出版社. ISBN：9787302559344. 2020.8."
-        url: "https://20wwww.bookask.com/book/3217983.html"
+        url: "https://item.jd.com/12950930.html"
 
       - title: "蒋建春，文伟平，杨凡，郑生琳编著,《计算机网络信息安全理论与实践教程》"
         name: "该书获2009年中国电子教育学会优秀教材二等奖，工信部教育与考试中心 “网络信息安全工程师高级职业教育”专用教材，被引用58次"
         source: "北京邮电大学出版社. ISBN：9787563515899. 2008.5."
-        url: "https://baike.baidu.com/item/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8%E7%90%86%E8%AE%BA%E4%B8%8E%E5%AE%9E%E8%B7%B5%E6%95%99%E7%A8%8B/6414249?fr=aladdin"
+        url: "https://item.jd.com/10030218565004.html"
       
       - title: "王昭，文伟平，王永刚等译,《计算机安全——原理与实践》"
         name: "全书共24章，约99万1千字，文伟平教授译其中6-16章的内容，并负责全书的初审和统稿"
@@ -1143,34 +1147,29 @@ enroll:
     urlname: "Read More"
     url: "http://www.ss.pku.edu.cn/index.php/teacherteam/teacherlist/1637-%E6%96%87%E4%BC%9F%E5%B9%B3"
 
-    contactto: 课题联系人：
+    contactto: 课题组长：
     contactby: 联系方式：
     introduction: 研究方向：
     contact:
       - program: 基于程序语义的Linux内核静态漏洞检测课题
         introduction: 研究基于关键约束的安全检查缺失漏洞检测方法。
         name: 陈夏润
-        email: xiar_c@pku.edu.cn
 
       - program: 基于动态沙箱的恶意软件检测课题
         introduction: 研究更高级的基于行为的恶意软件检测与对抗手段，包括动态检测沙箱、指令流模拟检测、基于行为的AI检测等。
-        name: 谢成淋
-        email: cony1996@pku.edu.cn
+        name: 谢成淋  
 
       - program: 代码混淆防逆向课题
         introduction: 对自研的主机入侵检测系统的关键检测算法进行混淆加密保护，对抗黑客的逆向分析、调试等破解手段，保护我们的技术竞争力。
-        name: 李成扬
-        email: lcymoon@pku.edu.cn
+        name: 李成扬 
 
       - program: 智能合约漏洞检测课题
         introduction: 挖掘区块链漏洞、智能合约漏洞，设计更高效全面的智能合约漏洞检测工具。
         name: 胡叶舟
-        email: yzhu_13@stu.pku.edu.cn
 
       - program: Java程序漏洞挖掘与入侵检测课题
         introduction: 通过对程序的分析，自动化挖掘可能存在漏洞的点。而在Java程序的入侵检测方面，拟使用RASP的方式进行设计实现，实现Java web框架通用漏洞的检测与定位，以及Java程序的自我防护。
         name: 刘成杰
-        email: cheng@stu.pku.edu.cn
 
     othercontact:
       - name: 文伟平
@@ -1179,13 +1178,9 @@ enroll:
         title: 教授，研究生、博士生导师
         email: weipingwen@pku.edu.cn
 
-      - name: 陈夏润
+      - name: 方莹
         title: 科研助理
-        email: xiar_c@pku.edu.cn
-
-      - name: 杨洲
-        title: 科研助理
-        email: yzss2019@pku.edu.cn
+        email: fangying@stu.pku.edu.cn
    
 
 footer:
@@ -1196,7 +1191,7 @@ footer:
       - title: "联系地址"
         labname1: "北京大学网络和软件安全保障"
         labname2: "重点实验室"
-        detail: "北京中关村学院南路62号资本大厦"
+        detail: "北京大学理科一号楼1533N"
         postcode: "北京市海淀区，100871"
     relativesitestitle: "友情链接"
     relativesites:
