--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -320,7 +320,7 @@ team:
     title: "课题代表"
     text: 
     section: team
-    people:
+    detail:
       - name: "陈夏润"
         role: "静态分析课题负责人"
         image: ../assets/img/team/chen.png
@@ -343,13 +343,21 @@ team:
         social:
           - url: https://www.cnblogs.com/agenthtb/
             icon: fab fa-gratipay
-      
+
       - name: "胡叶舟"
         role: "智能合约漏洞挖掘课题负责人"
         image: ../assets/img/team/huyezhou.jpg
         social:
           - url: https://blog.csdn.net/weixin_44437496
             icon: fab fa-gratipay
+
+      - name: "刘成杰"
+        role: "Java程序漏洞挖掘与入侵检测课题负责人"
+        image: ../assets/img/team/liuchengjie.png
+        social:
+          - url: https://github.com/liuchengjie01
+            icon: fab fa-github
+
 
 
 currentstudent:
@@ -1006,18 +1014,18 @@ patent:
     title: "专利成果"
     text: 
     item:
-      - title: "文伟平，一种Android系统的应用程序的加固方法"
+      - title: "文伟平、吴勃志，基于生物识别技术的硬件钱包防盗刷方法及系统"
         source: "国家知识产权局发明专利"
-        number: "专利授权号：CN201610034627.8，2016年1月19日，已授权"
-      - title: "文伟平，一种基于Android可执行文件重组的加固方法"
+        number: "专利申请号：201910382707.6，2019年5月8日"
+      - title: "文伟平、李经纬，一种基于朴素贝叶斯的安卓恶意应用检测方法及装置"
         source: "国家知识产权局发明专利"
-        number: "专利授权号：CN201610032328.0 ，2016年1月19日，已授权"
-      - title: "文伟平，一种基于APK加壳软件动态行为的查壳方法"
+        number: "专利授权号：CN201910212100.3，2019年3月20日，已授权"
+      - title: "文伟平、李经纬，基于ELF 文件特征的静态检测规则提取方法及检测方法"
         source: "国家知识产权局发明专利"
-        number: "专利授权号：CN201510740551.6，2015年11月4日，已授权"
-      - title: "文伟平，一种面向Lua语言的加扰混淆方法和解密方法"
+        number: "专利授权号：CN201910212116.4，2019年3月20日，已授权"
+      - title: "文伟平、李百川，一种基于IPv6隧道技术的远程设备控制方法及系统"
         source: "国家知识产权局发明专利"
-        number: "专利授权号：CN201510740424.6，2015年11月4日，已授权"
+        number: "专利申请号：201910132902.3，2019年2月22日"
       - title: "文伟平、叶晓亮、张汉、张涛，基于图相似度分析的webshell检测方法及系统"
         source: "国家知识产权局发明专利"
         number: "专利授权号：CN201810527915.6，2018年5月29日，已授权"
@@ -1030,18 +1038,6 @@ patent:
       - title: "文伟平、邓宇凡，一种基于雾计算的增强通讯安全的认证方法及系统"
         source: "国家知识产权局发明专利"
         number: "专利授权号：CN201810588865.2，2018年6月8日，已授权"
-      - title: "文伟平、李经纬，一种基于朴素贝叶斯的安卓恶意应用检测方法及装置"
-        source: "国家知识产权局发明专利"
-        number: "专利授权号：CN201910212100.3，2019年3月20日，已授权"
-      - title: "文伟平、李经纬，基于ELF 文件特征的静态检测规则提取方法及检测方法"
-        source: "国家知识产权局发明专利"
-        number: "专利授权号：CN201910212116.4，2019年3月20日，已授权"
-      - title: "文伟平、吴勃志，基于生物识别技术的硬件钱包防盗刷方法及系统"
-        source: "国家知识产权局发明专利"
-        number: "专利申请号：201910382707.6，2019年5月8日"
-      - title: "文伟平、李百川，一种基于IPv6隧道技术的远程设备控制方法及系统"
-        source: "国家知识产权局发明专利"
-        number: "专利申请号：201910132902.3，2019年2月22日"
       - title: "文伟平、胡浩然、汪子龙，一种基于稀疏表示和模型融合的Android Malware分类方法"
         source: "国家知识产权局发明专利"
         number: "专利申请号：201811306137.4，2018年11月9日"
@@ -1120,6 +1116,18 @@ patent:
       - title: "文伟平，一种基于Android系统微指令即时编译的加固方法"
         source: "国家知识产权局发明专利"
         number: "专利申请号：CN201610032724.3，2016年1月19日"
+      - title: "文伟平，一种Android系统的应用程序的加固方法"
+        source: "国家知识产权局发明专利"
+        number: "专利授权号：CN201610034627.8，2016年1月19日，已授权"
+      - title: "文伟平，一种基于Android可执行文件重组的加固方法"
+        source: "国家知识产权局发明专利"
+        number: "专利授权号：CN201610032328.0 ，2016年1月19日，已授权"
+      - title: "文伟平，一种基于APK加壳软件动态行为的查壳方法"
+        source: "国家知识产权局发明专利"
+        number: "专利授权号：CN201510740551.6，2015年11月4日，已授权"
+      - title: "文伟平，一种面向Lua语言的加扰混淆方法和解密方法"
+        source: "国家知识产权局发明专利"
+        number: "专利授权号：CN201510740424.6，2015年11月4日，已授权"
       - title: "发现Windows操作系统漏洞5个"
         source: 
         number: "Ms11-010 (CVE2011-0030) <br> Ms11-054 (CVE2011-1886) <br> Ms13-053 (CVE2013-3167)"
