--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -176,6 +176,12 @@ graduate:
         image: ../assets/img/timeline/ng.png
         alt: 
 
+      - title: "梁家溪 - 2014届校友"
+        post: "海南消防救援总队"
+        desc: 
+        image: ../assets/img/timeline/liangjiaxi.png
+        alt: 
+
       - title: "子芽 - 2015届校友"
         post: "悬镜安全创始人兼CEO"
         desc: "DevSecOps安全专家。北京市优秀毕业生，北京大学优秀毕业生，北京大学国奖、优秀科研奖和光华奖学金奖获得者，2017年度北京大学年度人物，2018年中国软件和信息服务业新锐人物，2019年度全国大学生优秀创业代表，DevSecOps自适应威胁管理技术体系开拓者。2014年创立DevSecOps敏捷安全领导者悬镜安全团队。2020年6接收红杉中国PreA轮独家领投，2021年3月，完成A轮近亿元战略融资，腾讯产业生态投资领投，红杉中国继续加持。"
@@ -249,6 +255,12 @@ graduate:
         post: "核工业计算机应用研究所"
         desc: ""
         image: ../assets/img/timeline/1.png
+        alt:
+
+      - title: "叶晓亮 - 2019届校友"
+        post: "国家工业信息安全发展研究中心（工信部电子一所）"
+        desc: 
+        image: ../assets/img/timeline/yexiaoliang.png
         alt:
 
       - title: "李经纬 - 2020届校友"
