--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -255,7 +255,7 @@ graduate:
       - title: "高峰 - 2018届校友"
         post: "四川省公安厅"
         desc: 
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/gaofeng.png
         alt: 
         blog: "https://blog.csdn.net/linhai1028?t=1"
 
