--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -246,6 +246,12 @@ graduate:
         image: ../assets/img/timeline/hudiankun.png
         alt: 
 
+      - title: "曹向磊 - 2016届校友"
+        post: "字节跳动"
+        desc: 
+        image: ../assets/img/timeline/caoxianglei.jpg
+        alt: 
+
       - title: "何永强 - 2017届校友兼2020级博士研究生"
         post: "奇安信保密事业部三部总经理"
         desc: "于2004年开始接触网络安全，2005年开始从事网络安全研究，主要从事软件漏洞挖掘，2010年创业于兴华永恒，所幸有一群小伙伴们一起创业，一起品味创业的艰辛和快乐，所幸2011年相识文老师，并于2014年拜师于文老师门下，在老师的带领下，同学们的相互帮助下，积极探索网络攻防产学研的各种难题，收获很多。为了更好更系统的学习网络安全，于2020年重回燕园，还是在文老师门下，主要研究方向是基于人工智能的渗透自动化。"
