--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -269,6 +269,12 @@ graduate:
         image: ../assets/img/timeline/zh.jpg
         alt: 
 
+      - title: "张雅婧 - 2017届校友"
+        post: "民生科技"
+        desc: 
+        image: ../assets/img/timeline/zhangyajing.png
+        alt: 
+
       - title: "贾世琳 - 2018届校友"
         post: "国家互联网应急中心"
         desc: "于2018年入职于国家互联网应急中心。"
@@ -382,6 +388,30 @@ graduate:
         post: "华为"
         desc: 
         image: ../assets/img/timeline/zhangyiran.png
+        alt: 
+
+      - title: "王林飞 - 2021届校友"
+        post: "山东省潍坊市纪委监委"
+        desc: 
+        image: ../assets/img/timeline/wanglinfei.png
+        alt: 
+
+      - title: "刘洪毅 - 2021届校友"
+        post: "于北京大学攻读博士学位"
+        desc: 
+        image: ../assets/img/timeline/liuhongyi.png
+        alt: 
+
+      - title: "方宇彤 - 2021届校友"
+        post: "北京公务员"
+        desc: 
+        image: ../assets/img/timeline/fangyutong.png
+        alt: 
+
+      - title: "叶何 - 2021届校友"
+        post: "快手"
+        desc: 
+        image: ../assets/img/timeline/1.png
         alt: 
 
       - title: "赵国梁 - 2021届校友"
