--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -188,6 +188,12 @@ graduate:
         desc: 
         image: ../assets/img/timeline/shenli.png
         alt:
+
+      - title: "吴钦 - 2013届校友"
+        post: "南通市公安局科技信息化处"
+        desc: 
+        image: ../assets/img/timeline/wuqin.png
+        alt:
         
       - title: "梅瑞 - 2014届校友"
         post: "现于中国科学院大学网络空间安全专业攻读博士学位"
