--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -151,6 +151,11 @@ graduate:
         image: ../assets/img/timeline/wxl.jpg
         alt: 
 
+      - title: "卢立蕾 - 2011届校友"
+        post: "唐山师范学院计算机科学系"
+        desc:
+        image: ../assets/img/timeline/lulilei.png
+
       - title: "卢康杰 - 2012届校友"
         post: "明尼苏达大学教授"
         desc: "研究兴趣包括安全性和隐私，程序分析和操作系统。硕士期间曾赴新加坡管理大学任研究助理，于美国佐治亚理工学院攻读计算机科学博士，曾作为访问学者前往德国马克斯普朗克研究所。"
@@ -224,6 +229,12 @@ graduate:
         post: "中国信息安全测评中心"
         desc: "专业领域：工控物联网安全、网络安全等级保护等。"
         image: ../assets/img/timeline/myy.jpg
+        alt: 
+
+      - title: "孟辉 - 2015届校友"
+        post: "中国刑事警察学院 讲师"
+        desc: 
+        image: ../assets/img/timeline/menghui.png
         alt: 
 
       - title: "张弛 - 2016届校友"
@@ -304,6 +315,12 @@ graduate:
         post: "北京科东"
         desc: 
         image: ../assets/img/timeline/wangkeying.png
+        alt: 
+
+      - title: "刘洋 - 2018届校友"
+        post: "中国通号"
+        desc: 
+        image: ../assets/img/timeline/liuyang.png
         alt: 
 
       - title: "汤炀 - 2018届校友"
