--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -323,6 +323,12 @@ graduate:
         image: ../assets/img/timeline/liuyang.png
         alt: 
 
+      - title: "赵烜 - 2018届校友"
+        post: "河北省发展改革委 "
+        desc: 
+        image: ../assets/img/timeline/zhaoxuan.png
+        alt: 
+
       - title: "汤炀 - 2018届校友"
         post: "快手"
         desc: 
