--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -1416,6 +1416,9 @@ footer:
         url: "https://course.pku.edu.cn/"
       - title: "北大网盘"
         url: "https://disk.pku.edu.cn/"
+    wechatplatformtitle: "微信公众号"
+    wechatplatform: ../assets/img/QRcode.jpg
+    wechatplatformname: "软微网络安全"
 
 
 
