--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -703,7 +703,7 @@ paper:
         url: 
         download: 
 
-      - title: "Why an Android app is classified as malware? Towards malware classification interpretation"
+      - title: "Why an Android app is classified as malware: Towards malware classification interpretation"
         name: "Bozhi Wu, Sen Chen, Cuiyun Gao, Lingling Fan, Yang Liu, Weiping Wen, and Michael R. Lyu"
         source: "ACM Transactions on Software Engineering and Methodology(TOSEM). September 2020. （CCF A）"
         url: "/files/paper23.pdf"
