--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -452,7 +452,7 @@ graduate:
       - title: "杜笑宇 - 2021届校友"
         post: "深信服（北京）"
         desc: 
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/dxy.jpg
         alt: 
 
       - title: "魏柳 - 2021届校友"
