--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -446,7 +446,7 @@ graduate:
       - title: "赵国梁 - 2021届校友"
         post: "字节跳动"
         desc: 
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/zgl.png
         alt: 
 
       - title: "杜笑宇 - 2021届校友"
