--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -440,7 +440,7 @@ graduate:
       - title: "叶何 - 2021届校友"
         post: "快手"
         desc: 
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/yh.png
         alt: 
 
       - title: "赵国梁 - 2021届校友"
@@ -464,7 +464,7 @@ graduate:
       - title: "蒋时雨 - 2021届校友"
         post: "人民银行长沙中心支行"
         desc: 
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/jsy.png
         alt: 
 
       
