--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -252,7 +252,7 @@ graduate:
       - title: "秦策 - 2016届校友"
         post: "华为"
         desc: "华为公司安全研究员，kcon2015，asiasecwest2018， defcon27，hwsv2020 演讲者。"
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/qc.png
         alt: 
         blog: "http://mohamoha.club/"
 
