--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -352,12 +352,6 @@ graduate:
         desc: 
         image: ../assets/img/timeline/yexiaoliang.png
         alt:
-    
-      - title: "杨芳芳 - 2019届校友"
-        post: "核工业计算机应用研究所"
-        desc: 
-        image: ../assets/img/timeline/1.png
-        alt:
 
       - title: "李百川 - 2019届校友"
         post: "腾讯（深圳）"
@@ -458,7 +452,7 @@ graduate:
       - title: "魏柳 - 2021届校友"
         post: "江苏电网"
         desc: 
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/wl.png
         alt: 
 
       - title: "蒋时雨 - 2021届校友"
