--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -404,7 +404,7 @@ graduate:
       - title: "鲁白冰 - 2020届校友"
         post: "中国银河证券股份有限公司"
         desc: 
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/lbb.png
         alt: 
 
       - title: "张逸然 - 2021届校友"
@@ -538,6 +538,19 @@ team:
           - url: https://github.com/lcy19
             icon: fab fa-github
 
+      - name: "黄天波"
+        role: "实时通讯安全技术研究负责人"
+        image: ../assets/img/team/huang.jpg
+        social:
+          - url: https://www.cnblogs.com/agenthtb/
+            icon: fab fa-gratipay
+
+      - name: "李涛"
+        role: "跨链协议安全技术负责人"
+        image: ../assets/img/team/lt.png
+        social:
+          
+
       - name: "胡叶舟"
         role: "智能合约漏洞挖掘课题负责人"
         image: ../assets/img/team/huyezhou.jpg
@@ -551,6 +564,12 @@ team:
         social:
           - url: https://github.com/liuchengjie01
             icon: fab fa-github
+
+      - name: "刘宇航"
+        role: "链上交易溯源技术研究负责人"
+        image: ../assets/img/team/lyh.png
+        social:
+          
 
       - name: "王晗"
         role: "ELF软件恶意行为动态分析技术负责人"
