--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -358,7 +358,7 @@ graduate:
       - title: "李百川 - 2019届校友"
         post: "腾讯（深圳）"
         desc: 
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/lbc.png
         alt:
 
       - title: "李经纬 - 2020届校友"
