echo updates some papers

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -1047,11 +1047,11 @@ paper:
     text: 
     item:
 
-      - title: "基于ＬＳＴＭ 的Ｌｉｎｕｘ系统下 ＡＰＴ攻击检测研究"
+      - title: "基于LSTM 的Linux系统下 ＡＰＴ攻击检测研究"
         name: "时 林,时绍森,文伟平"
         source: "信息安全研究，(2022)"
         url: "/files/paper96.pdf"
-        download: "基于ＬＳＴＭ 的Ｌｉｎｕｘ系统下 ＡＰＴ攻击检测研究.pdf"
+        download: "基于LSTM的Linux系统下APT攻击检测研究.pdf"
 
       - title: "基于符号执行的代币买卖漏洞和权限转移漏洞的检测验证方法"
         name: "刘宇航,刘军杰,文伟平"
