--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -599,7 +599,8 @@ currentstudent:
     text: 
     person: "2019级<br>陈夏润，谢成淋，黄天波，李成扬，杨洲，郭雨洁，时绍森，刘永志，李涛，李德才，王升，杨政，黄泽华 <br><br>
              2020级<br>何永强，胡叶舟，王雅仪，刘琛，刘宇航，刘成杰，刘军杰，肖遥，方莹 <br><br>
-             2021级<br>时林，蒋隽，付烨齐，王晗，张芊，朱一帆，彭婷，杨硕，吕子晗 <br><br>"
+             2021级<br>时林，蒋隽，付烨齐，王晗，张芊，朱一帆，彭婷，杨硕，吕子晗 <br><br>
+             2022级<br>张世琛，陈文，江昊，孔德广，宋少波，王康，燕昕仪，钟山，张帅，张艺琼 <br><br>"
 
 vulnerability:
     title: "漏洞成果"
