fix read more's link

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -1901,7 +1901,7 @@ enroll:
     subtitle2: 我们的课题包括但不限于
     subtitle3: 我们也欢迎广大学子报考我校，期待你们的加入
     urlname: "Read More"
-    url: "http://www.ss.pku.edu.cn/index.php/teacherteam/teacherlist/1637-%E6%96%87%E4%BC%9F%E5%B9%B3"
+    url: "https://www.ss.pku.edu.cn/teacherteam/teacherlist/1637-%E6%96%87%E4%BC%9F%E5%B9%B3.html"
 
     contactto: 课题组长：
     contactby: 联系方式：
