--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -600,7 +600,8 @@ currentstudent:
     person: "2019级<br>陈夏润，谢成淋，黄天波，李成扬，杨洲，郭雨洁，时绍森，刘永志，李涛，李德才，王升，杨政，黄泽华 <br><br>
              2020级<br>何永强，胡叶舟，王雅仪，刘琛，刘宇航，刘成杰，刘军杰，肖遥，方莹 <br><br>
              2021级<br>时林，蒋隽，付烨齐，王晗，张芊，朱一帆，彭婷，杨硕，吕子晗 <br><br>
-             2022级<br>张世琛，王康，江昊，钟山，张艺琼，张帅，宋少波，陈文，孔德广，燕昕仪 <br><br>"
+             2022级<br>张世琛，王康，江昊，钟山，张艺琼，张帅，宋少波，陈文，孔德广，燕昕仪 <br><br>
+             2023级<br>李锦凯，谢沅甫，田浩然，马亨来，栗飞龙，董雨昕，吴洋洋，李青蓝，王选军，徐梦婷，张技轩  <br><br>"
 
 vulnerability:
     title: "漏洞成果"
