--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -1660,6 +1660,22 @@ patent:
     text: 
     item:
 
+
+      - title: "文伟平 王晗 时林 张世琛，基于联盟链的软件完整性远程快速验证方法与系统"
+        source: "国家知识产权局发明专利"
+        number: "专利申请号：202311624142.0，2023年12月20日"
+        success: false
+        url: "/files/WX2023-31-001-发明专利申请公布通知书.pdf"
+        download: "基于联盟链的软件完整性远程快速验证方法与系统.pdf"
+
+      - title: "文伟平 王康 张庆峰 尹昊 唐源，基于虚拟机自省的 Linux 恶意代码检测方法与系统"
+        source: "国家知识产权局发明专利"
+        number: "专利申请号：202311759593.5，2023年11月30日"
+        success: false
+        url: "/files/WX2023-03-269-发明专利申请初步审查合格通知书.pdf"
+        download: "基于虚拟机自省的 Linux 恶意代码检测方法与系统.pdf"
+
+
       - title: "文伟平 王雅仪 刘琛 李成扬 方莹，一种基于LLVM的指令加花混淆方法及装置"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202211713901.6，2022年12月29日"
@@ -1671,6 +1687,9 @@ patent:
       - title: "文伟平、刘成杰，一种基于数据流传播分析的Java空指针引用检测方法及系统"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202210202341.1，2022年3月3日"
+        success: true
+        url: "/files/WX2022-03-042-发明专利证书.pdf"
+        download: "一种基于数据流传播分析的Java空指针引用检测方法及系统.pdf"
 
       - title: "文伟平、杨硕，一种航空装配制造溯源信息的获取方法"
         source: "国家知识产权局发明专利"
@@ -1679,6 +1698,9 @@ patent:
       - title: "文伟平、刘军杰，一种智能合约权限管理漏洞检测方法及装置"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202210150834.5，2022年2月19日"
+        success: true
+        url: "/files/WX2022-03-033-发明专利证书.pdf"
+        download: "一种智能合约权限管理漏洞检测方法及装置.pdf"
 
       - title: "文伟平、胡叶舟，一种基于区块链的问题解答激励方法及装置"
         source: "国家知识产权局发明专利"
@@ -1756,6 +1778,8 @@ patent:
         source: "国家知识产权局发明专利"
         number: "专利授权号：CN201810649997.1，2021年9月24日"
         success: true
+        url: "/files/WX2018-86-003-发明专利证书(签章).pdf"
+        download: "基于RASP区分后台线程权限与UI线程权限的方法.pdf"
    
 
       - title: "文伟平、杨晓琪，一种基于权限集差异的应用程序越权检测方法"
@@ -1769,6 +1793,8 @@ patent:
         source: "国家知识产权局发明专利"
         number: "专利授权号：CN201810612344.6，2021年9月24日"
         success: true
+        url: "/files/WX2018-86-002-发明专利证书(签章).pdf"
+        download: "一种基于RASP的PHP变形webshell的检测方法及系统.pdf"
  
 
       - title: "文伟平、李经纬，一种基于贝叶斯网的恶意文档检测方法及装置"
@@ -1800,6 +1826,8 @@ patent:
         source: "国家知识产权局发明专利"
         number: "专利授权号：CN201810527915.6，2018年5月29日"
         success: true
+        url: "/files/WX2018-86-001-发明专利证书(签章).pdf"
+        download: "基于图相似度分析的webshell检测方法及系统.pdf"
 
 
       - title: "文伟平、李燈辉，一种应用于私人空间入口的智能物品交互系统及方法"
