--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -1070,12 +1070,13 @@ paper:
         name: "Meng Wang, Yahao Zhang, WeiPing Wen"
         source: "Computers & Security  Jan. 2024, 103503. DOI:10.1016/j.cose.2023.103503"
         url: "https://doi.org/10.1016/j.cose.2023.103503"
+        download: "https://doi.org/10.1016/j.cose.2023.103503"
 
       - title: "Finding Missing Security Operation Bugs via Program Slicing and Differential Check"
         name: "Yeqi Fu, Yongzhi Liu, Qian Zhang, Zhou Yang, Xiarun Chen, Chenglin Xie, Weiping Wen"
         source: "Information and Communications Security  2023:702–718. DOI:10.1007/978-981-99-7356-9_41"
         url: "https://doi.org/10.1007/978-981-99-7356-9_41"
-      
+        download: "https://doi.org/10.1007/978-981-99-7356-9_41"
 
       - title: "针对品牌的网络钓鱼扩线与检测方案"
         name: "文伟平, 朱一帆, 吕子晗, 刘成杰"
