--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -11,14 +11,14 @@ portfolio:
     section: portfolio
     closebutton: "Close"
     
-middlecolumn:
-    titleleft: 学术报告
-    urlleft: pages/seminar.html
-    titlemiddle: 发表论文
-    urlmiddle: pages/paper.html
-    titleright: 专利成果
-    urlright: pages/patent.html
-    titlereadmore: 更多…
+# middlecolumn:
+#     titleleft: 学术报告
+#     urlleft: pages/seminar.html
+#     titlemiddle: 发表论文
+#     urlmiddle: pages/paper.html
+#     titleright: 专利成果
+#     urlright: pages/patent.html
+#     titlereadmore: 更多…
 
 timeline:
     title: "历届组长" 
