--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -598,7 +598,8 @@ currentstudent:
     title: "课题组成员"
     text: 
     person: "2022级<br>陈夏润(博士)，张世琛，王康，江昊，钟山，张艺琼，张帅，宋少波，陈文，孔德广，燕昕仪，邢泽栋，熊必成 <br><br>
-             2023级<br>刘成杰(博士)，谢沅甫(博士)，李锦凯，李鸿宇，田浩然，马亨来，栗飞龙，董雨昕，吴洋洋，李青蓝，王选军，徐梦婷，张技轩  <br><br>"
+             2023级<br>刘成杰(博士)，谢沅甫(博士)，李锦凯，李鸿宇，田浩然，马亨来，栗飞龙，董雨昕，吴洋洋，李青蓝，王选军，徐梦婷，张技轩  <br><br>
+             2024级<br>韩伯轩，顾哲远，方艺智，李心祺，郑伊健，王靖雯，谢品良，周杨恺，兰佳晨，张仕杰<br><br>"
 
 vulnerability:
     title: "漏洞成果"
