--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -477,10 +477,32 @@ graduate:
         post: "人民银行长沙中心支行"
         desc: 
         image: ../assets/img/timeline/jsy.png
-        alt: 
+        alt:
 
-      
-      
+      - title: "肖遥 - 2023届校友"
+        post: "字节跳动"
+        desc:
+        image: ../assets/img/timeline/1.png
+        alt:
+
+      - title: "王雅仪 - 2023届校友"
+        post: "蚂蚁金服"
+        desc:
+        image: ../assets/img/timeline/1.png
+        alt:
+
+      - title: "胡叶舟 - 2023届校友"
+        post: "美团"
+        desc:
+        image: ../assets/img/timeline/1.png
+        alt:
+
+      - title: "刘军杰 - 2023届校友"
+        post: "中国工商银行"
+        desc:
+        image: ../assets/img/timeline/1.png
+        alt:
+
 
 tutor:
     title: "课题导师"
